@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed OpenGL shared context handling (STR #2135)
 	- Fixed gray-scale images with alpha channel (STR #2105)
 	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
 	- Fixed documentation for Fl_Progress (STR #2209)
